--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,12 @@
+html,
+body,
+#dashboard {
+  height: 100%;
+}
+
 #dashboard {
   max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
